update genomics nb; edit installs; remove snpeff, gemini

--- a/day5/assignments/Bioinformatics_of_the_Central_Dogma.ipynb
+++ b/day5/assignments/Bioinformatics_of_the_Central_Dogma.ipynb
@@ -55,7 +55,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!mamba install -c bioconda fastqc multiqc bwa samtools bcftools freebayes snpeff gemini -y"
+    "!mamba install -c bioconda fastqc multiqc bwa samtools bcftools freebayes=1.3.6 -y"
    ]
   },
   {
@@ -142,21 +142,26 @@
    "id": "eef8cf95",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## Steps to download the reference genome and index it -- THIS WAS ALREADY RUN FOR YOU\n",
+    "# The data is large and the indexing takes a while, so we have already done this for you\n",
+    "\n",
+    "# !wget http://hgdownload.soe.ucsc.edu/goldenPath/hg19/bigZips/hg19.fa.gz\n",
+    "# !gunzip hg19.fa.gz\n",
+    "# !bwa index hg19.fa\n"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "a9c81502",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "### Step 3: Quality Control"
+    "## Step 3: Quality Control"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "da5cf37a",
    "metadata": {},
    "outputs": [],
@@ -173,14 +178,6 @@
    "source": [
     "!fastqc father_R1.fq.gz father_R2.fq.gz mother_R1.fq.gz mother_R2.fq.gz proband_R1.fq.gz proband_R2.fq.gz -o ."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a5d8af62",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -211,13 +208,11 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "6db14932",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "### Step 4: Alignment"
+    "## Step 4: Alignment"
    ]
   },
   {
@@ -237,7 +232,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!bwa mem -R '@RG\\tID:000\\tSM:father' hg19.fa father_R1.fq.gz father_R2.fq.gz > father.sam"
+    "!bwa mem -R '@RG\\tID:000\\tSM:father' /home/kwoyshn1/hg19_reference_genome/hg19.fa father_R1.fq.gz father_R2.fq.gz > father.sam"
    ]
   },
   {
@@ -247,7 +242,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!bwa mem -R '@RG\\tID:001\\tSM:mother' hg19.fa mother_R1.fq.gz mother_R2.fq.gz > mother.sam"
+    "!bwa mem -R '@RG\\tID:001\\tSM:mother' /home/kwoyshn1/hg19_reference_genome/hg19.fa mother_R1.fq.gz mother_R2.fq.gz > mother.sam"
    ]
   },
   {
@@ -257,13 +252,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!bwa mem -R '@RG\\tID:002\\tSM:proband' hg19.fa proband_R1.fq.gz proband_R2.fq.gz > proband.sam"
+    "!bwa mem -R '@RG\\tID:002\\tSM:proband' /home/kwoyshn1/hg19_reference_genome/hg19.fa proband_R1.fq.gz proband_R2.fq.gz > proband.sam"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f595050a",
+   "id": "56638ecb",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -317,13 +312,11 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "769f9524",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "### Step 5: Filter Alignments"
+    "## Step 5: Filter Alignments"
    ]
   },
   {
@@ -338,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "8a16a5b6",
    "metadata": {},
    "outputs": [],
@@ -348,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "e5c27b6b",
    "metadata": {},
    "outputs": [],
@@ -358,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "817ed198",
    "metadata": {},
    "outputs": [],
@@ -405,13 +398,11 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "d2397c44",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "### Step 6: Variant Calling"
+    "## Step 6: Variant Calling"
    ]
   },
   {
@@ -426,12 +417,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "fad846b8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!freebayes -f hg19.fa -b father.filtered.rmdup.bam mother.filtered.rmdup.bam proband.filtered.rmdup.bam > variants.vcf"
+    "!freebayes -f /home/kwoyshn1/hg19_reference_genome/hg19.fa -b father.filtered.rmdup.bam mother.filtered.rmdup.bam proband.filtered.rmdup.bam > variants.vcf"
    ]
   },
   {
@@ -443,13 +434,11 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "ef1030d5",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "### Step 7: Post-processing"
+    "## Step 7: Post-processing"
    ]
   },
   {
@@ -464,12 +453,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "5cd90078",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lines   total/split/joined/realigned/skipped:\t36260/1758/0/3816/0\n"
+     ]
+    }
+   ],
    "source": [
-    "!bcftools norm -f hg19.fa -m -any variants.vcf -o normalized_variants.vcf"
+    "!bcftools norm -f /home/kwoyshn1/hg19_reference_genome/hg19.fa -m -any variants.vcf -o normalized_variants.vcf"
    ]
   },
   {
@@ -481,229 +478,31 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2d20a450",
+   "cell_type": "markdown",
+   "id": "d2253278",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "### Step 8: Annotate Variants"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3f32652c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Annotate variants using SnpEff"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "73498fab",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!snpeff ann hg19 normalized_variants.vcf > annotated_variants.vcf"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "29a326ec",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7dfa25b3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### Step 9: Create a pedigree file"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "61ac8eec",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open('pedigree.ped', 'w') as f:\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bda00701",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "    f.write(\"#family_id\\tname\\tpaternal_id\\tmaternal_id\\tsex\\tphenotype\\n\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "eb92a3c6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "    f.write(\"FAM\\tfather\\t0\\t0\\t1\\t1\\n\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e774bcaa",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "    f.write(\"FAM\\tmother\\t0\\t0\\t2\\t1\\n\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ad5df657",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "    f.write(\"FAM\\tproband\\tfather\\tmother\\t1\\t2\\n\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cf19c14c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f7711471",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### Step 10: Load data into GEMINI"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "456fd7e6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!gemini load -v annotated_variants.vcf -p pedigree.ped -t snpEff database.db"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ac4b2530",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "61676602",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### Step 11: Inheritance Pattern Analysis"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "06951c4f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Query GEMINI for autosomal recessive inheritance patterns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4b4f01ea",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!gemini query -q \"SELECT chrom, start, ref, alt, impact, gene, clinvar_sig, clinvar_disease_name, clinvar_gene_phenotype, max_aaf_all FROM variants WHERE impact_severity != 'LOW' AND (max_aaf_all < 0.01 OR max_aaf_all IS NULL)\" -d database.db > inheritance_results.txt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3bc56afd",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8f726a6c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## Day 2: Additional Analysis"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c236b4d0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# More detailed analysis to follow based on Day 1's output..."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dd803c49",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2b8e35cb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## Lab Report and Discussion"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fb9bbcd1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Include screenshots, result analysis, and answers to discussion questions"
+    "## Step 8: Download VCF file, interpret in OpenCravat\n"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
